# committer

./: Cargo.toml  clippy.toml  generate_flamegraph.bash
.github/workflows/: ci.yml  coverage.yml  post-merge-gcs-push.yml  post-merge.yml
crates/committer/: BUILD  Cargo.toml
crates/committer/src/: block_committer.rs  deserialization.rs  deserialization_impl.rs  deserialization_types.rs  example_json.json  felt.rs  forest_errors.rs  input_handle.rs  io_handle.rs  lib.rs  main.rs  patricia_merkle_tree.rs  storage.rs  test_utils.rs  types.rs
crates/committer/src/block_committer/: commit.rs  errors.rs  input.rs  types.rs
crates/committer/src/deserialization/: cast.rs  errors.rs  read.rs  read_test.rs  types.rs
crates/committer/src/hash/: hash_trait.rs  types.rs
crates/committer/src/patricia_merkle_tree/: current_skeleton_node.rs  current_skeleton_tree.rs  errors.rs  external_test_utils.rs  filled_node.rs  filled_tree.rs  hash.rs  internal_test_utils.rs  node.rs  original_skeleton_calc.rs  original_skeleton_calc_test.rs  original_skeleton_node.rs  original_skeleton_tree.rs  patricia_merkle_node.rs  patricia_merkle_tree.rs  serialised_node.rs  serialized_node.rs  skeleton_node.rs  skeleton_node_test.rs  skeleton_tree.rs  skeleton_tree_test.rs  test_utils.rs  tree.rs  types.rs  types_test.rs  updated_skeleton_node.rs  updated_skeleton_tree.rs  updated_skeleton_tree_test.rs
crates/committer/src/patricia_merkle_tree/filled_tree/: errors.rs  forest.rs  node.rs  node_serde.rs  tree.rs  tree_test.rs
crates/committer/src/patricia_merkle_tree/node_data/: errors.rs  inner_node.rs  inner_node_test.rs  inner_node_tests.rs  leaf.rs  leaf_serde.rs  leaf_serde_test.rs
crates/committer/src/patricia_merkle_tree/original_skeleton/: original_skeleton_calc.rs  original_skeleton_calc_test.rs  tree.rs
crates/committer/src/patricia_merkle_tree/original_skeleton_tree/: compute_updated_skeleton_tree.rs  compute_updated_skeleton_tree_test.rs  config.rs  create_tree.rs  create_tree_test.rs  errors.rs  node.rs  original_skeleton_calc.rs  original_skeleton_calc_test.rs  skeleton_forest.rs  skeleton_forest_test.rs  tree.rs  utils.rs  utils_test.rs
crates/committer/src/patricia_merkle_tree/updated_skeleton/: tree.rs  updated_skeleton_tree_test.rs
crates/committer/src/patricia_merkle_tree/updated_skeleton_tree/: compute_updated_skeleton_tree.rs  compute_updated_skeleton_tree_test.rs  create_tree_helper.rs  create_tree_helper_test.rs  errors.rs  hash_function.rs  hash_function_test.rs  node.rs  skeleton_forest.rs  tree.rs  tree_test.rs
crates/committer/src/patricia_merkle_tree/utils/: random_structs.rs
crates/committer/src/storage/: committer_storage.rs  db_object.rs  errors.rs  map_storage.rs  mock_storage.rs  serde_trait.rs  sorage_trait.rs  storage_trait.rs
crates/committer/src/tests/: python_tests.rs
crates/committer_benchmarking/: Cargo.toml
crates/committer_benchmarking/src/: main.rs
crates/committer_cli/: BUILD  Cargo.toml
crates/committer_cli/bench/: committer_bench.rs
crates/committer_cli/benches/: bench_split_and_prepare_post.sh  committer_bench.rs  tree_flow_inputs.json
crates/committer_cli/src/: args.rs  block_hash.rs  commands.rs  lib.rs  main.rs  patricia_merkle_tree.rs  tracing_utils.rs
crates/committer_cli/src/deserialization/: cast.rs
crates/committer_cli/src/filled_tree_output/: errors.rs  filled_forest.rs
crates/committer_cli/src/parse_input/: cast.rs  raw_input.rs  read.rs  read_test.rs
crates/committer_cli/src/patricia_merkle_tree/: errors.rs  filled_forest.rs
crates/committer_cli/src/tests/: benchmark_tests.rs  flow_test_files_prefix  python_tests.rs  regression_tests.rs  utils.rs
crates/committer_cli/src/tests/utils/: objects.rs  parse_from_python.rs  random_structs.rs
crates/starknet-committer/: Cargo.toml
crates/starknet-committer/src/: hash.rs  lib.rs  starknet_forest.rs  starknet_patricia_merkle_tree.rs
crates/starknet-committer/src/block_committer/: commit.rs  input.rs
crates/starknet-committer/src/starknet_forest/: filled_forest.rs  forest_errors.rs  original_skeleton_forest.rs  updated_skeleton_forest.rs
crates/starknet-committer/src/starknet_patricia_merkle_tree/: node.rs  tree.rs  types.rs
crates/starknet-committer/src/starknet_patricia_merkle_tree/starknet_leaf/: leaf.rs  leaf_serde.rs
scripts/: taplo.sh
