[workspace]
# Using version 2 to avoid unifying features. For more info, read:
#   https://doc.rust-lang.org/cargo/reference/resolver.html#feature-resolver-version-2
resolver = "2"

members = ["crates/committer", "crates/committer_cli"]

[workspace.package]
version = "0.1.0-rc.0"
edition = "2021"
repository = "https://github.com/starkware-libs/committer/"
license = "Apache-2.0"
license-file = "LICENSE"

[workspace.dependencies]
pretty_assertions = "1.2.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"
starknet-types-core = "0.0.11"
starknet_api = "0.12.0-dev.0"
thiserror = "1.0.24"

[workspace.lints.rust]
warnings = "deny"
future-incompatible = "deny"
nonstandard-style = "deny"
rust-2018-idioms = "deny"
unused = "deny"

[workspace.lints.clippy]
as_conversions = "deny"
