[package]
name = "committer"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = "Computes and manages Starknet state."

[lints]
workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
rstest.workspace = true

[dependencies]
derive_more.workspace = true
starknet-types-core.workspace = true
starknet_api = "0.12.0-dev.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
