[package]
name = "committer"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = "Computes and manages Starknet state."

[lints]
workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
rstest.workspace = true

[dependencies]
derive_more.workspace = true
starknet-types-core.workspace = true
starknet_api.workspace = true
serde_json.workspace = true
serde.workspace = true
thiserror.workspace = true
