[package]
name = "committer"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = "Computes and manages Starknet state."

[lints]
workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
rstest.workspace = true

[dependencies]
bisection.workspace = true
derive_more.workspace = true
starknet-types-core.workspace = true

