[package]
name = "committer_cli"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = "Cli for the committer package."

[lints]
workspace = true

[dependencies]
starknet.workspace = true
pathfinder-crypto.workspace = true
starknet-types-core = { version = "0.0.10", git = "https://github.com/starknet-io/types-rs", default-features = false, features = [
    "alloc",
    "serde",
    "arbitrary",
    "curve",
    "hash",
] }