[package]
name = "committer_cli"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = "Cli for the committer package."

[lints]
workspace = true

[dependencies]
rand = "0.8"
starknet.workspace = true
pathfinder-crypto.workspace = true
tokio = { version = "1.2.0", features = ["full"] }
async-recursion = "1.1.0"