[package]
name = "starknet-committer"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
license-file.workspace = true

[dependencies]
committer = { path = "../committer", features = ["testing"] }
log.workspace = true
thiserror.workspace = true
starknet-types-core.workspace = true
rstest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[lints]
workspace = true
